# LightX2V

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  Dockerfile_cu124  Dockerfile_deploy  README.md  README_zh.md  causal_inference.py  environment.yml  magcache_generate.py  pyproject.toml  requirements-docs.txt  requirements.txt  requirements_animate.txt  requirements_win.txt  setup.py  setup_vae.py  wan_sekotalk.py
.codex/model_support/: SKILL.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: lint.yml
app/: README.md  gradio_demo.py  gradio_demo_zh.py  run_gradio.sh  run_gradio_win.bat
app/utils/: i18n.py  image_page.py  model_choices.py  model_components.py  model_handlers.py  model_utils.py  ui_builder.py  video_page.py
blogs/EN/: DisaggBlogPost.md
blogs/ZH_CN/: DisaggBlogPost.md
configs/: model_pipeline.json  mooncake_config.json  volcengine_voices_list.json
configs/attentions/: wan_i2v_draft_480p.json  wan_i2v_flash.json  wan_i2v_nbhd_480p.json  wan_i2v_nbhd_720p.json  wan_i2v_nbhd_sla_480p.json  wan_i2v_radial.json  wan_i2v_rainfusion_480p.json  wan_i2v_sage.json  wan_i2v_sla_480p.json  wan_i2v_sla_fa4_480p.json  wan_i2v_sla_flashinfer_480p.json  wan_i2v_sla_flex_block_480p.json  wan_i2v_sla_magi_480p.json  wan_i2v_sla_sage2_480p.json  wan_i2v_sla_sage3_480p.json  wan_i2v_sparge_480p.json  wan_i2v_sparge_fa4_480p.json  wan_i2v_sparge_sage2_480p.json  wan_i2v_svg.json  (+9 more)
dockerfiles/: Dockerfile  Dockerfile.mi350  Dockerfile_5090  Dockerfile_cambricon_mlu590  Dockerfile_cu124  Dockerfile_cu130  Dockerfile_cu130_conda  Dockerfile_cu130_ros2_jazzy  Dockerfile_cu130_ros2_lyrical  Dockerfile_deploy  Dockerfile_fix  build_deploy.sh
docs/: fast_ulysses_backend.md
examples/: README.md  README_zh.md  multi_launch.py  simple_launch.py
lightx2v/: __init__.py  api_server.py  infer.py  infer_magicdrive.py  light_generator.py  pipeline.py  shot_stream_infer.py  warmup.py
lightx2v_fast_ulysses/: .gitignore  CMakeLists.txt  NOTICE.md  README.md  __init__.py  comm.py  pyproject.toml  setup.py
lightx2v_fast_ulysses/csrc/: a2a_config.cuh  all_to_all.cu  all_to_all_tma.cu  bindings.cpp  symmetric_pool.cu  symmetric_pool.cuh  tma_ptx.cuh  ulysses_common.cuh  ulysses_group.cu  ulysses_group.cuh
lightx2v_kernel/: CMakeLists.txt  LICENSE  README.md  pyproject.toml
lightx2v_kernel_xpu/: README.md
lightx2v_platform/: README.md  registry_factory.py  set_ai_device.py
lightx2v_ros/src/common/: package.xml  setup.py
lightx2v_ros/src/common/common/: __init__.py  contract.py
lightx2v_ros/src/simulator/: package.xml  setup.py
lightx2v_ros/src/simulator/simulator/libero_node/: env.py  main.py  observer.py
lightx2v_ros/src/simulator/simulator/robolab_node/: __init__.py  env.py  main.py
lightx2v_ros/src/simulator/simulator/robotwin_node/: __init__.py  env.py  main.py
lightx2v_ros/src/simulator/simulator/sim/: __init__.py  base_env.py  node.py
lightx2v_train/: export_model_state.py  infer.py  run_dist.sh  train.py
scripts/: run.py  run.sh  run_tensorboard_docker_bridge.sh  run_wan_i2v.sh  run_wan_i2v_dist.sh
test_cases/: run_hunyuan15.sh  run_hunyuan15_i2v.sh  run_hunyuan15_t2v.sh  run_hunyuan15_t2v_offload.sh  run_qwen_image_i2i_2509.sh  run_seko_talk_01_base.sh  run_wan_i2v.sh  run_wan_i2v_offload.sh  run_wan_t2v_dist_cfg_ulysses.sh  run_wan_t2v_sf.sh  test_bagel_t2i_support.py  test_ernie_image_runner.py  test_fast_ulysses_backend.py  test_helios_consistency_helpers.py  test_helios_distilled_support.py  test_int8_triton_kernels.py  test_layer_norm_weight_routing.py  test_mmap_pinned_weights.py  test_region_event_trace.py  test_registry_factory.py  test_rope_modules.py  test_transformer_block_profile_shapes.py  test_transformer_profile.py  test_wan_feature_cache_cfg_state.py  test_wan_mxfp8_fuse_forwarding.py  test_wan_switch_status.py
tests/: test_flux2_runner_tp_io.py  test_flux2_tp_splitting.py  test_hunyuan_image3_hybrid_collectives.py  test_hunyuan_image3_integration.py  test_hunyuan_image3_parallel_control.py  test_hunyuan_image3_sequence_parallel.py  test_hunyuan_video_15_alignment.py  test_longcat_seq_parallel.py  test_ltx2_platform_device_source.py  test_ltx2_tp_gated_attention.py  test_z_image_dist_config.py
tools/: download_rife.py  ltx2_upsample_video.py  trace_kernel_inspector.py  upscale_video.py
(+2694 files in other folders)
